--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.11",
+    "clsx": "^1.2.1",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -17,8 +21,19 @@
     "@types/node": "18.11.5",
     "@types/react": "18.0.23",
     "@types/react-dom": "18.0.7",
-    "eslint": "8.26.0",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "eslint": "8.21.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "lint-staged": "^13.0.1",
+    "prettier": "^2.7.0",
+    "sass": "^1.55.0",
     "typescript": "4.8.4"
   }
 }
